--- a/Bot/pom.xml
+++ b/Bot/pom.xml
@@ -25,6 +25,11 @@
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
     </dependency>
+    <dependency>
+    <groupId>io.github.cdimascio</groupId>
+    <artifactId>java-dotenv</artifactId>
+    <version>5.2.2</version>
+</dependency>
     
 <dependency>
     <groupId>com.googlecode.json-simple</groupId>
