--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
   command = "mvn clean install"
   publish = "target/generated-static-files"
+
+[build.environment]
+  MAVEN_VERSION = "3.8.4"
