--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "mvn clean install"
+  command = "./mvnw clean install"
   publish = "target/generated-static-files"
+
 
 [build.environment]
   MAVEN_VERSION = "3.8.4"
