--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
-
 [build]
-  command = "bash mvnw clean install"
+  command = "bash ./mvnw clean install"
   publish = "target/generated-static-files"
