--- a/Bot/Dockerfile
+++ b/Bot/Dockerfile
@@ -1,5 +1,8 @@
-FROM eclipse-temurin:17-jdk-alpine
-VOLUME /temp
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM maven:3.8.5-openjdk-17 AS build
+COPY . .
+RUN mvn clean package -DskipTests
+
+FROM openjdk:17.0.1-jdk-slim
+COPY --from=build /target/Bot-0.0.1-SNAPSHOT.jar Bot.jar
 EXPOSE 9090
+ENTRYPOINT ["java","-jar","Bot.jar"]
